Provide only list of daily predictions in REST. Precalculate max value for population data. Use detected user locale than automatic. In same peak mode, scale data according to prediction. Count with wider labels for slider. Avoid wrapping dates in slider labels.

--- a/web/react-web/src/App.css
+++ b/web/react-web/src/App.css
@@ -208,6 +208,10 @@
   box-shadow: 0 0 5px orange;
 }
 
+.App .rc-slider-mark-text {
+  white-space: nowrap;
+}
+
 @media screen
 and (max-width: 599px) {
   .App {
